# Physical-AI-and-Humanoid-Robotics-book

./: .gitignore  API_INTEGRATION.md  README.md  e2e_test.py  requirements.txt  system_test.py  test_system.py
backend/: .gitignore  README.md  alembic.ini  init_db.py  main.py  pyproject.toml  requirements.txt  retrieval.py  test_db.py  test_db_connection.py  test_qdrant.py  test_qdrant_methods.py  test_sqlite.py
backend/config/: settings.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 001_initial_auth_tables.py  002_add_last_login_at_to_users.py
backend/src/: __init__.py  chunker.py  crawler.py  embedder.py  extractor.py  main.py  storage.py  utils.py
backend/src/api/: __init__.py  chat_api.py
backend/src/api/v1/: __init__.py  auth.py  personalization.py
backend/src/database/: __init__.py  database.py  session_manager.py
backend/src/exceptions/: __init__.py  auth_exceptions.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  chat_models.py  personalization_log.py  session.py  user.py
backend/src/rag_agent/: __init__.py  main.py  rag_agent.py  requirements.txt
backend/src/repositories/: __init__.py  personalization_log.py  session.py  user_profile.py
backend/src/retrieval/: __init__.py  query_processor.py  result_validator.py  vector_search.py
backend/src/schemas/: __init__.py  auth.py
backend/src/services/: __init__.py  better_auth.py  personalization.py  session.py  user_profile.py
backend/src/utils/: __init__.py  auth.py  content_adaptation.py  helpers.py  logging.py  security.py  validation.py
book/: DEPLOYMENT.md  README.md  docusaurus.config.ts  package-lock.json  (+3 more)
(+140 files in other folders)
